# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
py-modules = ['dag_json']

[project]
name = 'dag-json'
version = '0.2'
authors = [
    { name='Ryan Barrett', email='dag-json@ryanb.org' },
]
description = 'Python implementation of the IPLD DAG-JSON codec'
readme = 'README.md'
requires-python = '>=3.7'
keywords = ['DAG-JSON', 'IPLD', 'codec', 'CID']
dependencies = [
    'multiformats>=0.3.1.post4',
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'License :: Public Domain',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Development Status :: 3 - Alpha',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
'Homepage' = 'https://github.com/snarfed/dag-json'

[project.optional-dependencies]
tests = [
    'python-testmark>=1.0',
]
